Fix orderSuccess page not align bug

--- a/src/app/order-confirmation-succeess/order-confirmation-succeess.page.scss
+++ b/src/app/order-confirmation-succeess/order-confirmation-succeess.page.scss
@@ -3,4 +3,5 @@
     width: 85%; 
     margin-left: auto; 
     margin-right: auto;
+    text-align: center;
 }
